# healthcare-rag

./: .gitignore  README.md  docker-compose.yml  download_models.sh  pyproject.toml
.github/workflows/: lint.yml
data_ingestion/app/api/: ingestion_routes.py  models.py
data_ingestion/celery_worker/: tasks.py
data_ingestion/core/: main.py
data_ingestion/parsers/: base_parser.py  document_parser.py
data_ingestion/utils/: custom_chunker.py  enhanced_healthcare_chunker.py  healthcare_chunker.py  openai_embedding.py  qdrant.py  task_utils.py  task_utils_enhanced.py
data_retrieval/app/api/: models.py  retrieval_routes.py
data_retrieval/core/: main.py  settings.py
data_retrieval/utils/: llm_generator.py  openai_embedding.py  prompts.py  query_enhancer.py  reranker.py  search.py
dockerfiles/: qdrant.dockerfile
docs/: chunking_strategy_analysis.md  ner_enrichment.md  query_time_enhancement.md
scripts/: download_models.py  download_models_debug.py  enrich_metadata.py  fix_all_ner_issues.py  patch_ner_query_integration.py  test_final_pipeline.py  test_healthcare_chunker.py  test_import.py  test_integration.py  test_multi_collection_filters.py  test_ner_enrichment.py  test_ner_integration.py  test_query_enhancement.py  test_query_processing.py  verify_full_pipeline_with_ner.py  verify_ner_fixes.py  verify_ner_integration.py  verify_pipeline.py  verify_query_enhancement.py
shared/embeddings/: __init__.py  base.py  openai_embedding.py  registry.py  transformer_embeddings.py
shared/medical_ner/: __init__.py  base.py  biobert_ner.py  entity_processor.py  model_registry.py
shared/query_analysis/: __init__.py  enhanced_processor.py  intent_detection.py  medical_analyzer.py  medical_analyzer_with_ner.py  query_enhancer.py
