[tool.poetry]
name = "rag-demo"
version = "0.1.0"
description = "A data ingestion and data retrieval service using RAG"
authors = ["Akshat Gupta <akshatb@kuzushilabs.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = { extras = ["standard"], version = "^0.22.0" }
celery = "^5.3.0"
boto3 = "^1.26.0"
redis = "^4.6.0"
transformers = "^4.30.0"
openai = "^1.73.0"
qdrant-client = "^1.13.3"
sentence-transformers = "^4.1.0"
pydantic-settings = "^2.8.1"
tokenizers = "^0.21.1"
llama-index = "^0.12.33"
llama-parse = "^0.6.20"
requests = "^2.32.3"
ruff = "^0.11.12"
watchtower = "3.4.0"
pyyaml = "^6.0.2"
python-multipart = "^0.0.20"
torch = "^2.0.0"
numpy = "^1.24.0"
# NER dependencies
rich = "^13.0.0"  # For pretty printing in test scripts

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
